--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <img src="./img/logo.png" width="50" height="50" alt="">
-        <b>みるく屋本舗だ</b>
+        <b>みるく屋本舗</b>
       </a>
       <button class="navbar-toggler navbar-togglar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
