[Update]攻略本の更新　Lv01～75までの攻略法について記述しました。

--- a/capture.html
+++ b/capture.html
@@ -26,7 +26,7 @@
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="./img/logo.png" width="50" height="50" alt="">
-        <b class="text-light">みるく屋本舗</b>
+        <b>みるく屋本舗</b>
       </a>
       <button class="navbar-toggler navbar-togglar-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -118,6 +118,17 @@
           <p><b style="font-size: 30px">(100+75)×1.4=245%</b></p>
           <p>つまり、実際取得できる経験値は、元々あった100%に+245%で3.45倍になります。</p>
           <p>絶対に４人パーティーで行きましょう！</p>
+          <h5 class="mt-5 mb-5">☆PSO2の日(毎月2日 +プレミアムは22日)</h5>
+          <p>この日だけは、終日トライブースト+100%が標準で付きます。</p>
+          <p>この日にレベルアップクエストを全力で周回しましょう！</p>
+          <p>また、ボーナスキー東京・金ももらえますので、必ずログインしましょう！</p>
+          <h5 class="mt-5 mb-5">☆プレミアムブースト</h5>
+          <p>プレミアムアカウントだと、その期間は常にトラブ+50%がつきます。</p>
+          <p>また、プレミアムアカウントだとプレミアムドリンクを飲むことができ、</p>
+          <p>確定で経験値UPの効果を得られるドリンクを飲むことができます！</p>
+          <p>一応ノーマルアカウントでもランダムで出ますが、そちらは+10%で</p>
+          <p>こちらは+15%なので、地味にありがたいことであったりします。</p>
+          <p>その他多くのメリットがあるので、プレミアムアカウントをおすすめします。</p>
         </div>
       </div>
     </div>
@@ -128,7 +139,18 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h2 class="mt-0 mb-5"><b>Lv01～50</b></h2>
-          <h5 class="mt-0 mb-5">明日ここから更新します</h5>
+          <h5 class="mt-0 mb-5">クエストに行かない！</h5>
+          <p>それが大事です。ひたすらに。</p>
+          <p>理由としては、難易度的にも効率的にも、経験値がおいしくないからです。</p>
+          <p>初心者として始めた時点だと、倉庫に「経験値獲得チケット」が眠っているので</p>
+          <p>まずはそれを使ってドシドシとレベルを上げていきましょう！</p>
+          <p>１レベル上がるのに必要な経験値が一気に上がるのは41レベル以降なので</p>
+          <p>そこまでは一気に上がっていくはずです。</p>
+          <p><b style="font-size: 20px">しかし！</b>そこで注意点があります。</p>
+          <p>各職業にはLv30とLv40の時点で「レベル制限解除試練」があります。</p>
+          <p>これをクリアしておかないと、経験値を取得しても溢れてしまいます。</p>
+          <p>そのレベルになった時点で必ず開放しておきましょう！</p>
+          <p>また、「難易度制限解放試練」も必ず忘れずにやっておきましょう。</p>
         </div>
       </div>
     </div>
@@ -139,7 +161,44 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h2 class="mt-0 mb-5"><b>Lv51～75</b></h2>
-          <h5 class="mt-0 mb-5">coming soon...</h5>
+          <h5 class="mt-0 mb-5">ボーナスキー</h5>
+          <p>ここまで取っておいた君！よく我慢した！！！</p>
+          <p>ボーナスクエストは、自身の現在のレベルに応じて、取得できる経験値量が違います。</p>
+          <p>ボーナスキーは有効期限がありますので、ここらで使うのも手ではないでしょうか。</p>
+          <p>PSO2の日はボーナスクエストにも経験値+100%がつきますので、期限がもつならその時行きましょう。</p>
+          <h5 class="mt-5 mb-5">暗影渦巻く壊れた世界SH</h5>
+          <p>これをひたすら周回する日々が始まります。</p>
+          <p>しかし、これよりおいしいクエストなんか他にはボーナスキーしかないレベルです。</p>
+          <p>圧倒的経験値効率を誇るクエストなので、レベリングには必ず行きましょう！</p>
+          <p>レベルアップクエストの仕様上、五日に一回来るのでチェックしておきましょう。</p>
+          <h5 class="mt-5 mb-5">レベル75制限解除試験・○○</h5>
+          <p>ここで第一の大きな関門に突入します。</p>
+          <p>レベル75制限解除試験とは、その名の通り75のレベルキャップを解放する試験です。</p>
+          <p>そしてこのレベルキャップ解放はクラスごとやらなければなりません。</p>
+          <p>条件は、</p>
+          <p>「そのメインクラスで装備できる武器種(ガンスラ除)の☆13以上を+35まで強化する」</p>
+          <p>というものになります。</p>
+          <p>☆13武器の強化を最短で+35にするには、</p>
+          <p><b>強化値+0～+10</b></p>
+          <p>下記のいずれかを合成する。<p>
+          <ul>
+            <li>☆12武器+26一本+強化大成功+100%(推奨)</li>
+            <li>☆13武器+30一本</li>
+          </ul>
+          <p><b>強化値+11～+20, +21～+30, +31～+35</b></p>
+          <p>下記のいずれかを合成する。<p>
+            <ul>
+              <li>☆12武器+30EXPMAX一本+強化大成功+100%</li>
+              <li>☆13武器+30一本</li>
+            </ul>
+          <p>という過程を踏んでいきます。</p>
+          <p>クラスをLv75にしたときに、称号報酬で「レオンティーナ証書」というアイテムがもらえます。</p>
+          <p>また、期間限定ビンゴや、新人プレイヤー応援！レベルアップキャンペーンでもらえます。</p>
+          <p>それ一枚と☆13の+30が交換できます。しかし、交換した武器は強化値最大+35ではありません。</p>
+          <p>ですので、マイショップで買った☆13武器の最大強化値が+35の武器に、</p>
+          <p>それらを食わせることによって非常に容易に条件を達成することができます。</p>
+          <p>足りない場合は、マイショップにて特殊能力で「エンペ・エンブレイス」がついているものを探し、</p>
+          <p>+35になるまでそれをどんどん混ぜていくことで簡単に達成されます。</p>
         </div>
       </div>
     </div>
