--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
   <body>
   <!-- Navigation -->
+  <!-- ローカルリポジトリでの -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
