[Update]メンバーの追加　スケさんとれぬてゃんさんを追加しました。

--- a/index.html
+++ b/index.html
@@ -163,6 +163,28 @@
             <p class="mb-0">よろしくです</p>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <a href="img/member06.jpg"><img src="img/member06.jpg" class="shadow" width="90%" height="auto"></a>
+            <h3 class="mt-4"><b>スケ</b><img src="img/Ra.png" class="class" width="20%" height="auto"></h3>
+            <b class="text-info">VISITER</b>
+            <p class="text-muted mt-3">愛称 : <span style="color: black">すけさん</span></p>
+            <p class="text-muted mt-3">- コメント -</p>
+            <p class="mb-0">更新中・・・</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <a href="img/noimage.png"><img src="img/noimage.png" class="shadow" width="90%" height="auto"></a>
+            <h3 class="mt-4"><b>れぬてゃん</b><img src="img/Bo.png" class="class" width="20%" height="auto"></h3>
+            <b class="text-info">VISITER</b>
+            <p class="text-muted mt-3">愛称 : <span style="color: black">れーぬ</span></p>
+            <p class="text-muted mt-3">- コメント -</p>
+            <p class="mb-0">更新中・・・</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -175,20 +197,23 @@
 
       <h3 class="mt-5 mb-4">2019/06/06 <span class="text-lgreen">イェーガーさん入団ッ！</span></h3>
       <a href="img/event02.jpg" class="mb-4"><img src="img/event02.jpg" width="100%" height="auto"></a>
-      <p class="mt-5"</p>
-      <p>私たちに新しいメンバーが加わりました～</p>
-      <p>キャストのイェーガーさんです！</p>
-      <p>つい二日前に始めたばかりで、PS4勢の方だとお聞きしました。</p>
-      <p>一緒にこのチームを盛り上げていきましょう！</p>
-      <p class="mb-5">これからよろしくお願いします！！！</p>
+      <div style="text-align: left">
+        <p class="mt-5">私たちに新しいメンバーが加わりました～</p>
+        <p>キャストのイェーガーさんです！</p>
+        <p>つい二日前に始めたばかりで、PS4勢の方だとお聞きしました。</p>
+        <p>一緒にこのチームを盛り上げていきましょう！</p>
+        <p class="mb-5">これからよろしくお願いします！！！</p>
+      </div>
 
       <h3 class="mt-5 mb-4">2019/06/02 <span class="text-lgreen">チーム設立ッ！</span></h3>
       <a href="img/event01.jpg" class="mb-4"><img src="img/event01.jpg" width="100%" height="auto"></a>
-      <p class="mt-5">この度、<b>「みるく屋本舗」</b>という名前で新たにチームを設立いたしました！</p>
-      <p>チームの皆がいろいろな人と交流して、普通にPSO2をしているだけでは経験できない</p>
-      <p>メンバーとの絆から生まれる楽しさを提供できればと思っています！</p>
-      <p>このサイトもまだまだ開設したばかりなので，コンテンツももっと充実させていきたいなー</p>
-      <p class="mb-5">まだまだ小さいチームですが、二人から精一杯頑張っていきます！</p>
+      <div style="text-align: left">
+        <p class="mt-5">この度、<b>「みるく屋本舗」</b>という名前で新たにチームを設立いたしました！</p>
+        <p>チームの皆がいろいろな人と交流して、普通にPSO2をしているだけでは経験できない</p>
+        <p>メンバーとの絆から生まれる楽しさを提供できればと思っています！</p>
+        <p>このサイトもまだまだ開設したばかりなので，コンテンツももっと充実させていきたいなー</p>
+        <p class="mb-5">まだまだ小さいチームですが、二人から精一杯頑張っていきます！</p>
+      </div>
     </div>
   </section>
 
