[Update]一言コメントの追加　スケさんの一言コメントを追加しました。

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <b class="text-info">VISITER</b>
             <p class="text-muted mt-3">愛称 : <span style="color: black">すけさん</span></p>
             <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">更新中・・・</p>
+            <p class="mb-0">へっしょ</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6">
