--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <a href="img/member05.jpg"><img src="img/member05.jpg" class="shadow" width="90%" height="auto"></a>
             <h3 class="mt-4"><b>ルリ</b><img src="img/Bo.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">VISITER</b>
+            <b class="text-info">COMMON MEMBER</b>
             <p class="text-muted mt-3">愛称 : <span style="color: black">るり</span></p>
             <p class="text-muted mt-3">- コメント -</p>
             <p class="mb-0">よろしくです</p>
