--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <div class="col-lg-4 col-md-6">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member02.png"><img src="img/member02.png" class="shadow" width="90%" height="auto"></a>
+            <a href="img/member02.jpg"><img src="img/member02.jpg" class="shadow" width="90%" height="auto"></a>
             <h3 class="mt-4"><b>にほんじん</b><img src="img/Ph.png" class="class" width="20%" height="auto"></h3>
             <b class="text-info">MANAGER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">にほんじん</span></p>
+            <p class="text-muted mt-3">愛称 : <span style="color: black">おにさん</span></p>
             <p class="text-muted mt-3">- コメント -</p>
             <p class="mb-0">♂です。</p>
           </div>
