[Update]文章の変更　加入申請メールをプレイヤー名ではなくプレイヤーIDにしました

--- a/teamform.html
+++ b/teamform.html
@@ -62,7 +62,7 @@
           <p class="mb-5">除名執行日の延長が可能な生存確認メールを送信できます。</p>
           <ul><img class="mb-2 mr-1" src="img/teamform/img01.png" width="20px" height="auto"><b>ご注意</b>
             <li>相当の長期間生存確認メールのみだと、除名対象になることがあります。</li>
-            <li>件名は「生存確認(キャラクター名)」でお願いいたします</li>
+            <li>件名は「生存確認(プレイヤーID)」でお願いいたします</li>
           </ul>
           <div style="text-align: center">
             <!-- Make sure to change the email address in anchor text AND the link below! -->
