[Update]攻略本の追記　攻略本が完成しました！

--- a/capture.html
+++ b/capture.html
@@ -171,6 +171,24 @@
           <p>しかし、これよりおいしいクエストなんか他にはボーナスキーしかないレベルです。</p>
           <p>圧倒的経験値効率を誇るクエストなので、レベリングには必ず行きましょう！</p>
           <p>レベルアップクエストの仕様上、五日に一回来るのでチェックしておきましょう。</p>
+          <h5 class="mt-5 mb-5">クラスごとのスキルポイント取得クライアントオーダー</h5>
+          <p>レベル75になると、レベルキャップに到達した状態でレベルアップすることで、</p>
+          <p>(つまり、後述のレベル75 or レベル80制限解除試験をクリアしない状態でレベルアップすることで)</p>
+          <p>そのクラスのエクスキューブを取得することができます。(例:バウンサーならBoエクスキューブ)</p>
+          <p>それを渡すことによって、クラスごとにスキルポイントを獲得できるクライアントオーダーがあります。</p>
+          <p>全てのクラス共通で、最初は1個、次は2個、3個、4個と要求数が増えていき、</p>
+          <p>全4つで合計10個のクラスエクスキューブが必要になります。</p>
+          <p>勿論レベルキャップごとに、レベルアップできる必要経験値量が大きく異なるので、</p>
+          <p>クラスキューブが貰える数は以下のような配分となっています。</p>
+          <ul>
+            <li>レベルキャップ<b>75</b>の場合はレベルアップごとに<b>1個</b>。</li>
+            <li>レベルキャップ<b>80</b>の場合はレベルアップごとに<b>5個</b>。</li>
+            <li>レベルキャップ<b>90</b>の場合はレベルアップごとに<b>7個</b>。</li>
+          </ul>
+          <p>先述の通り、クラスキューブが必要な量は合計10個なので、</p>
+          <p>レベルキャップが75の時にレベル10分、若しくは80の時にレベル2分レベルアップして、</p>
+          <p>クラスキューブを入手すれば無駄がなくスキルポイントを獲得できます。</p>
+          <p>どちらかのタイミングで済ませるようにしましょう！</p>
           <h5 class="mt-5 mb-5">レベル75制限解除試験・○○</h5>
           <p>ここで第一の大きな関門に突入します。</p>
           <p>レベル75制限解除試験とは、その名の通り75のレベルキャップを解放する試験です。</p>
@@ -186,19 +204,19 @@
             <li>☆13武器+30一本</li>
           </ul>
           <p><b>強化値+11～+20, +21～+30, +31～+35</b></p>
-          <p>下記のいずれかを合成する。<p>
-            <ul>
-              <li>☆12武器+30EXPMAX一本+強化大成功+100%</li>
-              <li>☆13武器+30一本</li>
-            </ul>
+          <pp>下記のいずれかを合成する。<p>
+          <ul>
+            <li>☆12武器+30EXPMAX一本+強化大成功+100%</li>
+            <li>☆13武器+30一本</li>
+          </ul>
           <p>という過程を踏んでいきます。</p>
           <p>クラスをLv75にしたときに、称号報酬で「レオンティーナ証書」というアイテムがもらえます。</p>
           <p>また、期間限定ビンゴや、新人プレイヤー応援！レベルアップキャンペーンでもらえます。</p>
           <p>それ一枚と☆13の+30が交換できます。しかし、交換した武器は強化値最大+35ではありません。</p>
           <p>ですので、マイショップで買った☆13武器の最大強化値が+35の武器に、</p>
-          <p>それらを食わせることによって非常に容易に条件を達成することができます。</p>
+          <p>それらを混ぜることによって非常に容易に条件を達成することができます。</p>
           <p>足りない場合は、マイショップにて特殊能力で「エンペ・エンブレイス」がついているものを探し、</p>
-          <p>+35になるまでそれをどんどん混ぜていくことで簡単に達成されます。</p>
+          <p>+35になるまでそれをどんどん混ぜていくことで簡単に達成できます。</p>
         </div>
       </div>
     </div>
@@ -209,7 +227,49 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h2 class="mt-0 mb-5"><b>Lv76～80</b></h2>
-          <h5 class="mt-0 mb-5">coming soon...</h5>
+          <h5 class="mt-0 mb-5">必要経験値の異常なまでの上昇</h5>
+          <p><b>今までとは比べ物にならないくらいにレベルが上がらなくなってきます。</b></p>
+          <p>ただ、昔のPSO2と比較したら今はボーナスキーもあり、レベルアップクエストなんてものもあり、</p>
+          <p>そのうえPSO2の日では経験値+100%で、プレミアムなら毎日トラブ+50%もつくだって！？</p>
+          <b>めげずに頑張りましょう！私たちがついています！</b>
+          <h5 class="mt-5 mb-5">ボーナスキー</h5>
+          <p>それはここでも同じです。</p>
+          <p>PSO2で経験値が一番おいしいクエストは間違いなくボーナスキー！</p>
+          <p>手に入れたらPSO2の日をねらって絶対に行きましょう！</p>
+          <p>(ブーストアイテムを忘れずにね！)</p>
+          <h5 class="mt-5 mb-5">暗影渦巻く壊れた世界SH</h5>
+          <p>「え？なんでまだこの段階でもXH行かないの？」</p>
+          <p>そう思う方も多いことでしょう。</p>
+          <p>試しにXHに行ってみた方はわかると思いますが、</p>
+          <p><b>クエストに12人いることのほうが少ないです。</b></p>
+          <p>何故か？ということですが、</p>
+          <p>それはSHとXHの受注可能なレベル帯の差にあります。</p>
+          <p>SHはレベル50から受注可能で、XHには、メインサブの双方を75まで上げないと行けません。</p>
+          <p>なので、SHを回るのは、75-50=レベル25分の幅の方で、</p>
+          <p>なおかつメインはレベル75であってもサブはまだという方も含まれます。</p>
+          <p>それに対してXHはレベル75から受注可能で、最大はレベル90です。</p>
+          <p>なので、XHを回るのは、90-75=レベル15分の幅の方で、</p>
+          <p>なおかつメインサブ双方が75以上である方です。</p>
+          <p>それゆえに、暗影で人数が集まるのは必然的にSHとなるわけです。</p>
+          <p>人数が集まるということは、パーティーが組めるのでブーストがのる。</p>
+          <p><b>そういうことです！</b></p>
+          <h5 class="mt-5 mb-5">クラスごとのスキルポイント取得クライアントオーダー</h5>
+          <p>Lv50～75で前述のとおりです。</p>
+          <p>もしもレベル75の時点でやっていなかったのであれば、</p>
+          <p>ここで必ず済ませてしまいましょう！</p>
+          <h5 class="mt-5 mb-5">レベル80制限解除試験・○○</h5>
+          <p>「またレベルキャップか・・・」</p>
+          <p>安心してください。今回のは<b>めちゃくちゃ簡単</b>です。</p>
+          <p>レベルを75にした時点で称号報酬でもらっていた、３つの「サブ／ステラウォール」というユニット。</p>
+          <p>若しくは、ここまで暗影を周回している人なら持っているであろう「ウェポンズバッジ2019」。</p>
+          <p>それとバッジ交換ショップで交換できる☆12ユニットの、</p>
+          <p>「リア／サーキュレイ」、「アーム／サーカレイ」、「レッグ／サークレイ」。</p>
+          <p>そのどちらかのシリーズを全て+10にしてから装備して話しかけるだけで達成できます。</p>
+          <p>ユニットの強化は、武器と比較してものすごく簡単なので、</p>
+          <p>強化値+7までは補助アイテム何も無しで上げていき、</p>
+          <p>+8以降は、「強化成功率+5%」と「強化リスク軽減(+1)」を使用して上げていくだけで十分です。</p>
+          <p>もっていないのであれば、どちらも非常に安価にマイショップで販売していますので、</p>
+          <p>どんどん上げて、ぱぱっと報告してしまいましょう！</p>
         </div>
       </div>
     </div>
@@ -220,7 +280,10 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <h2 class="mt-0 mb-5"><b>Lv81～90</b></h2>
-          <h5 class="mt-0 mb-5">coming soon...</h5>
+          <h5 class="mt-0 mb-5" style="color: skyblue">気合!!!!!!</h5>
+          <p>今までの知識をすべて駆使してレベルを上げていきましょう。</p>
+          <p>ブースト、ボーナスキー、暗影...</p>
+          <p><b style="font-size: 20px">頂上はもうすぐです！</b></p>
         </div>
       </div>
     </div>
