--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <a href="img/noimage.png"><img src="img/noimage.png" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>零式ベンジャミン</b><img src="img/Bo.png" class="class" width="20%" height="auto"></h3>
+            <h3 class="mt-4"><b>零式ベンジャミン</b><img src="img/Fi.png" class="class" width="20%" height="auto"></h3>
             <b class="text-info">VISITER</b>
             <p class="text-muted mt-3">愛称 : <span style="color: black">べんさん</span></p>
             <p class="text-muted mt-3">- コメント -</p>
