--- a/rules.html
+++ b/rules.html
@@ -129,7 +129,7 @@
           <h2 class="mt-0">同意確認</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-3">上記の事項に同意された方はこちらからご連絡下さい！</p>
-          <p class="text-muted"><img class="mb-2 mr-1" src="img/teamform/img01.png" width="20px" height="auto">件名は「チーム加入申請(プレイヤーID)」でお願いいたします</p>
+          <p class="text-muted"><img class="mb-2 mr-1" src="img/teamform/img01.png" width="20px" height="auto">件名は「チーム加入申請(プレイヤーIDネーム)」でお願いいたします</p>
         </div>
       </div>
       <div style="text-align: center">
