[Update]Etロゴの追加、メンバーリストの更新

--- a/old_component.html
+++ b/old_component.html
@@ -1,126 +1,70 @@
- <!--  Old Member Section -->
-  <!--
-  <section class="page-section bg-secondary" id="member">
-    <div class="container">
-      <h2 class="text-center mt-0"><b>こんな仲間たちがいます！</b></h2>
-      <hr class="divider my-4">
-      <div class="row">
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member01.jpg"><img src="img/member01.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>Ormair</b><img src="img/Bo.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">TEAM MASTER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">おるむー</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">今日も頑張って参ります！</p>
-            <p class="mb-0">チムメン募集中です！！</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member03.jpg"><img src="img/member03.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>イェーガー</b><img src="img/Ra.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">MANAGER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">がー</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">ロマンを求めて幾年・・・！</p>
-            <p class="mb-0">来たれ、我らが同胞よ！</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member09.jpg"><img src="img/member09.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>猫姫</b><img src="img/Ph.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">MANAGER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">ねこ</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p>『It’s Showtime!!』</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member02.jpg"><img src="img/member02.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>にほんじん</b><img src="img/Ph.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">おに</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">♂です。</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member04.jpg"><img src="img/member04.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>Baru335</b><img src="img/Ph.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">ばる</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">圧倒的感謝ｧｧｧ</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member05.jpg"><img src="img/member05.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>ルリ</b><img src="img/Bo.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">るり</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">よろしくです</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member06.jpg"><img src="img/member06.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>零式ベンジャミン</b><img src="img/Fi.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">べん</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">古代から受け継いだ</p>
-            <p class="mb-0">進化にきらめく街へダイブ</p>
-            <p class="mb-0">膨張し続けるデータの海泳いで</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member07.jpg"><img src="img/member07.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>Nyao.</b><img src="img/Ph.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">おうせ</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">寝るのだ(-_-)zzz</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member08.jpg"><img src="img/member08.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>リーン</b><img src="img/Ra.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">りん</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">このゲームを全力で楽しむことを</p>
-            <p class="mb-0">誓います！アッシェンテ！</p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <a href="img/member10.jpg"><img src="img/member10.jpg" class="shadow" width="90%" height="auto"></a>
-            <h3 class="mt-4"><b>キール</b><img src="img/Hu.png" class="class" width="20%" height="auto"></h3>
-            <b class="text-info">COMMON MEMBER</b>
-            <p class="text-muted mt-3">愛称 : <span style="color: black">きーる</span></p>
-            <p class="text-muted mt-3">- コメント -</p>
-            <p class="mb-0">気楽に頑張ります！</p>
-          </div>
-        </div>
-      </div>
+<!--
+<div class="col-lg-4 col-sm-6">
+  <a class="member-box" href="img/member09.jpg">
+    <img class="img-fluid img-thumbnail" src="img/member09.jpg" alt="">
+    <div class="member-box-caption p-3">
+      <img src="img/Ph.png" class="class">
+      <p class="mb-1 member-position">
+        MANAGER
+      </p>
+      <p class="mb-2 member-name">
+        猫姫
+      </p>
+      <p class="mb-1 text-white-75">
+        <p class="mb-0">愛称 : ねこ</p>
+        <p>本職 : Ph</p>
+      </p>
+      <p class="mb-1 text-white-75">
+        <b class="mb-0">- コメント -</b>
+        <p>『It’s Showtime!!』</p>
+      </p>
     </div>
-  </section>
-  -->
+  </a>
+</div>
+
+<div class="col-lg-4 col-sm-6">
+  <a class="member-box" href="img/member10.jpg">
+    <img class="img-fluid img-thumbnail" src="img/member10.jpg" alt="">
+    <div class="member-box-caption p-3">
+        <img src="img/Hu.png" class="class">
+      <p class="mb-1 member-position">
+        COMMON MEMBER
+      </p>
+      <p class="mb-2 member-name">
+        キール
+      </p>
+      <p class="mb-1 text-white-75">
+        <p class="mb-0">愛称 : きーる</p>
+        <p>本職 : HuFi</p>
+      </p>
+      <p class="mb-1 text-white-75">
+        <b class="mb-0">- コメント -</b>
+        <p>気楽に頑張ります！</p>
+      </p>
+    </div>
+  </a>
+</div>
+
+<div class="col-lg-4 col-sm-6">
+  <a class="member-box" href="img/noimage.png">
+    <img class="img-fluid img-thumbnail" src="img/noimage.png" alt="">
+    <div class="member-box-caption p-3">
+        <img src="img/Br.png" class="class">
+      <p class="mb-1 member-position">
+        COMMON MEMBER
+      </p>
+      <p class="mb-2 member-name">
+        アラドw
+      </p>
+      <p class="mb-1 text-white-75">
+        <p class="mb-0">愛称 : あらど</p>
+        <p>本職 : 更新中...</p>
+      </p>
+      <p class="mb-1 text-white-75">
+        <b class="mb-0">- コメント -</b>
+        <p>更新中...</p>
+      </p>
+    </div>
+  </a>
+</div>
+-->
