--- a/old_component.html
+++ b/old_component.html
@@ -67,4 +67,49 @@
     </div>
   </a>
 </div>
+
+<div class="col-10 my-3 member-box animated" data-scroll="once toggle(.fadeInUp, .invisible) centerVartical" >
+  <span class="img">
+    <img load="lazyload" class="img-fluid" src="img/member08.jpg" alt="" data-toggle="modal" data-target="#member08">
+  </span>
+  <div class="content">
+    <div class="name">
+      <div>
+        <h1>リーン</h1>
+        <h6>common member</h6>
+      </div>
+      <a href="#" class="invisible">Profile<span class="delta"></span></a>
+    </div>
+    <div class="member-border"></div>
+    <div class="discription">
+      <blockquote>
+        <h1>『このゲームを全力で楽しむことを誓います！アッシェンテ！』</h1>
+      </blockquote>
+      <p>以前は天才ゲーマーと呼ばれた逸材。持ち前の判断力と戦術を生かして身を投じてARKSになる。アシエイト！！</p>
+      <aside class="mt-5">
+        <p><i class="fas fa-heart"></i> りん</p>
+        <p><i class="fas fa-gamepad"></i> レンジャー</p>
+      </aside>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="member08" tabindex="-1" role="img" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered"  role="img">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="modal-controller">
+          <a href="img/member08.jpg" download>
+            <button class="download" aria-label="Download">
+              <span><i class="fas fa-download"></i></span>
+            </button>
+          </a>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true"><i class="far fa-times-circle"></i></span>
+          </button>
+        </div>
+        <img load="lazyload" class="img img-fluid" src="img/member08.jpg" alt="">
+      </div>
+    </div>
+  </div>
+</div>
 -->
